<?xml version="1.0"?>
<package format="2">

  <name>gazebo_rad_source</name>
  <version>2.0.0</version>

  <description>custom radiation source</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_rad_msgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_files/models" />
  </export>

</package>
