<?xml version="1.0"?>
<package format="2">

  <name>gazebo_rad_source</name>
  <version>1.0.0</version>
  <description>Radiation source</description>

  <author email="stibipet@fel.cvut.cz">Petr Stibinger</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_rad_msgs</depend>
  <depend>gazebo_plugins</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_files/models" />
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>

</package>
